css/spekcheck.css
/*
  The logo is the Heavy check mark character, unicode 10004, with the
  visible spectrum as color.  There's not really a CSS option to use
  an image as color, so we set the font as transparent, while clipping
  the image with the text.  This works in most of current browsers.
  In the ones that do not work, it will falback to use a white font
  over an image of the visible spectrum.
*/

.spekcheck-filtersview
{
    max-height: 200px;
    overflow-y: auto;
}

/*
  Style cursor for drag and drop the filters.
*/
#filters-view li:hover
{
    cursor: grab;
}

/*
  We need to specify a height value,. to the parent of the canvas
  element, so it knows how to be responsive.

  http://www.chartjs.org/docs/latest/general/responsive.html#important-note

  When changing this, we also need to account for when it's inserted
  into another webpage so we can't use sizes relative to the viewport.
*/
.spekcheck-chart-container
{
    display: inline-block;
    position: relative;
    margin: auto;
    height: 80vh;
    width: 100%;
}


/*
  We shouldn't need this...
*/
.container {
    float: left;
    margin: 1em;
}

/*
  Styling for spectral selection controls
*/
#spectral-min-slider,
#spectral-max-slider
{
    width: 100%;
    cursor: pointer;
    padding: 0;
    height: 2rem;
    vertical-align: middle;
}

/* Flex layout for range input + number input */
.d-flex {
    display: flex;
}

.d-flex .form-control-range {
    flex-grow: 1;
    margin-right: 0.5rem;
}

.d-flex .form-control-sm {
    flex-shrink: 0;
}

